--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-SESSION_ID="PLEASE ADD YOUR SESSION HERE INCONNU~XD~"
+SESSION_ID="INCONNU~XD~vhRD0ZbD#QwQq4KeuF0kjLnw6X6wPqTToF4rEiVAaVIkI7_-831E"
 PREFIX=.
-OWNER_NUMBER=554488138425
-SUDO_NUMBER=554488138425
-OWNER_NAME=INCONNU BOY
+OWNER_NUMBER=917908716389
+SUDO_NUMBER=917908716389
+OWNER_NAME=RDX RAHUL YT 
 AUTO_STATUS_SEEN=true
 AUTO_BIO=true
 AUTO_STATUS_REACT=true
