--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-SESSION_ID="INCONNU~XD~vhRD0ZbD#QwQq4KeuF0kjLnw6X6wPqTToF4rEiVAaVIkI7_-831E"
+SESSION_ID="INCONNU~XD~K1w20K6Q#00l1-BtODG3bqXEWGSi_qfSkImQsIv9rS410pkmYQTc"
 PREFIX=.
-OWNER_NUMBER=917908716389
-SUDO_NUMBER=917908716389
+OWNER_NUMBER=2250161647382
+SUDO_NUMBER=2250161647382
 OWNER_NAME=RDX RAHUL YT 
 AUTO_STATUS_SEEN=true
 AUTO_BIO=true
