--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-SESSION_ID="INCONNU~XD~K1w20K6Q#00l1-BtODG3bqXEWGSi_qfSkImQsIv9rS410pkmYQTc"
+SESSION_ID="INCONNU~XD~yt4ExCyT#8sQf3ZbIoCihMnURBKHCRJBj4th55zNrCMZJqDXsOgs"
 PREFIX=.
-OWNER_NUMBER=2250161647382
-SUDO_NUMBER=2250161647382
+OWNER_NUMBER=919332648701
+SUDO_NUMBER=919332648701
 OWNER_NAME=RDX RAHUL YT 
 AUTO_STATUS_SEEN=true
 AUTO_BIO=true
