--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-SESSION_ID="INCONNU~XD~yt4ExCyT#8sQf3ZbIoCihMnURBKHCRJBj4th55zNrCMZJqDXsOgs"
+SESSION_ID="INCONNU~XD~utRHEDaR#sRRub-BI5rW0p4vTNkJY1fgrPlrXXVjsQyCe7cukqQk"
 PREFIX=.
 OWNER_NUMBER=919332648701
 SUDO_NUMBER=919332648701
-OWNER_NAME=RDX RAHUL YT 
+OWNER_NAME=romantic boy
 AUTO_STATUS_SEEN=true
 AUTO_BIO=true
 AUTO_STATUS_REACT=true
