--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-SESSION_ID="INCONNU~XD~utRHEDaR#sRRub-BI5rW0p4vTNkJY1fgrPlrXXVjsQyCe7cukqQk"
+SESSION_ID="INCONNU~XD~j05QmR5J#eOKAP-bG_BhcUU9Je80vFBzySfD-3cYt95er8QZ3vdg"
 PREFIX=.
-OWNER_NUMBER=919332648701
-SUDO_NUMBER=919332648701
+OWNER_NUMBER=919239531054
+SUDO_NUMBER=919239531054
 OWNER_NAME=romantic boy
 AUTO_STATUS_SEEN=true
 AUTO_BIO=true
@@ -9,7 +9,7 @@ AUTO_STATUS_REACT=true
 AUTO_READ=false
 AUTO_RECORDING=false
 AUTO_REACT=false
-STATUS_READ_MSG=STATUS VIEWED BY INCONNU XD V2 ✅
+STATUS_READ_MSG=STATUS VIEWED BY RDX RAHUL YT ✅
 ANTILINK=false
 ANTIBOT=true
 ANTIBOT_WARNINGS=3
