--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 
 {
   
-  "name": "INCONNNU-XD-V2",
+  "name": "RAHUL-RDX-RDX",
   "description": "Best Whatsapp bot made by inconnu boy tech",
   "logo":"https://files.catbox.moe/959dyk.jpg",
   "keywords": [
